Finishec uncomment-photo and added get-comments
